--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,10 @@
     <title>Vite App</title>
   </head>
   <body>
-
+    <load src="./partials/header.html" />
     <main>
-      <load src="./partials/Hero.html" />
+      <load src="./partials/hero.html" />
     </main>
-    <!-- <script type="module" src="./js/main.js"></script> -->
+    <script type="module" src="./js/main.js"></script> 
   </body>
 </html>
