--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <load src="./partials/header.html" />
     <main>
       <load src="./partials/hero.html" />
+      <load src="./partials/benefits.html"/>
     </main>
     <script type="module" src="./js/main.js"></script> 
   </body>
