--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
     <main>
       <load src="./partials/hero.html" />
       <load src="./partials/benefits.html"/>
+      <load src="./partials/about.html"/>
     </main>
     <script type="module" src="./js/main.js"></script> 
   </body>
