--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,13 @@
       <load src="./partials/hero.html" />
       <load src="./partials/benefits.html"/>
       <load src="./partials/about.html"/>
+      <load src="./partials/how.html"/>
+      <load src="./partials/top.html"/>
+      <load scr="./partials/subscribe.html"/>
     </main>
+    <footer>
+      <load scr="./footer.html"/>
+    </footer>
     <script type="module" src="./js/main.js"></script> 
   </body>
 </html>
