--- a/src/index.html
+++ b/src/index.html
@@ -19,21 +19,21 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+
     <title>Vite App</title>
   </head>
   <body>
-    <load src="./partials/header.html" />
+    <load src="./partials/header.html" /> 
     <main>
       <load src="./partials/hero.html" />
       <load src="./partials/benefits.html"/>
       <load src="./partials/about.html"/>
       <load src="./partials/how.html"/>
       <load src="./partials/top.html"/>
+      <load src="./partials/reviews.html"/>
       <load scr="./partials/subscribe.html"/>
+      <load scr="./partials/footer.html"/> 
     </main>
-    <footer>
-      <load scr="./footer.html"/>
-    </footer>
     <script type="module" src="./js/main.js"></script> 
   </body>
 </html>
