--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,8 @@
       <load src="./partials/reviews.html"/>
       <load scr="./partials/subscribe.html"/>
       <load scr="./partials/footer.html"/> 
+
+      <load scr="./partials/modal-buy.html"/>
     </main>
     <script type="module" src="./js/main.js"></script> 
   </body>
