--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
       <load scr="./partials/footer.html"/> 
 
       <load scr="./partials/modal-buy.html"/>
+      <load scr="./partials/modal-leave.html"/>
     </main>
     <script type="module" src="./js/main.js"></script> 
   </body>
