--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
       <load src="./partials/benefits.html"/>
       <load src="./partials/about.html"/>
       <load src="./partials/how.html"/>
+      <load scr="./partials/our.html"/>
       <load src="./partials/top.html"/>
       <load src="./partials/reviews.html"/>
       <load scr="./partials/subscribe.html"/>
