--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
@@ -23,21 +23,22 @@
     <title>Vite App</title>
   </head>
   <body>
-    <load src="./partials/header.html" /> 
+    <load src="./partials/header.html" />
     <main>
       <load src="./partials/hero.html" />
-      <load src="./partials/benefits.html"/>
-      <load src="./partials/about.html"/>
-      <load src="./partials/how.html"/>
-      <load scr="./partials/our.html"/>
-      <load src="./partials/top.html"/>
-      <load src="./partials/reviews.html"/>
-      <load scr="./partials/subscribe.html"/>
-      <load scr="./partials/footer.html"/> 
+      <load src="./partials/benefits.html" />
+      <load src="./partials/about.html" />
+      <load src="./partials/how.html" />
+      <load scr="./partials/our.html" />
+      <load src="./partials/top.html" />
+      <load src="./partials/reviews.html" />
+      <load scr="./partials/subscribe.html" />
+      <load scr="./partials/footer.html" />
 
-      <load scr="./partials/modal-buy.html"/>
-      <load scr="./partials/modal-leave.html"/>
+      <load scr="./partials/modal-buy.html" />
+      <load scr="./partials/modal-leave.html" />
+      <load scr="./partials/modal-subscribe.html" />
     </main>
-    <script type="module" src="./js/main.js"></script> 
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
