--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
 
+    <link rel="icon" href="./images/favicon.png" type="image/icon-logo"/>
     <title>Vite App</title>
   </head>
   <body>
